# tinyjsondb

./: pyproject.toml
src/tinyjsondb/: core.py
