[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tinyjsondb"
version = "0.1.0"
description = "Embedded JSON-based ORM-like database for small Python projects"
authors = [
    { name="Waland2", email="cool.drakon@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
keywords = ["json", "database", "orm", "tinydb", "embedded"]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/your-username/tinyjsondb"
Repository = "https://github.com/your-username/tinyjsondb"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["tinyjsondb"]

[tool.setuptools.packages.find]
where = ["src"]